components/mm1-sup/src/mixed/strategy/one_for_one/snapshots/mm1_sup__mixed__strategy__one_for_one__tests__mixed::strategy::one_for_one::tests::run::add_3_started_3_exited_2_max_restart_intensity_not_reached.snap
---
source: components/mm1-sup/src/mixed/strategy/one_for_one/tests.rs
expression: report
---
- "RestartIntensity { max_restarts: 1, within: 30s }"
- "ADD     [one]"
- "ADD     [two]"
- "ADD     [three]"
- DECIDE
- ">>> Start(one)"
- ">>> Start(two)"
- ">>> Start(three)"
- "STARTED [one] / <:1>"
- "STARTED [two] / <:2>"
- "STARTED [three] / <:3>"
- DECIDE
- ">>> InitDone"
- "EXITED  <:1> normal_exit=false"
- DECIDE
- ">>> Start(one)"
- DELAY 40s
- "STARTED [one] / <:4>"
- "EXITED  <:2> normal_exit=false"
- DECIDE
- ">>> Start(two)"
- "STARTED [two] / <:5>"
- "EXITED  <:3> normal_exit=false"
- DECIDE
- ">>> Stop(<:5>, Some(\"two\"))"
- ">>> Stop(<:4>, Some(\"one\"))"
- "EXITED  <:5> normal_exit=false"
- "EXITED  <:4> normal_exit=false"
- DECIDE
- ">>> Quit(normal=false)"
