components/mm1-sup/src/mixed/strategy/one_for_one/snapshots/mm1_sup__mixed__strategy__one_for_one__tests__mixed::strategy::one_for_one::tests::run::add_started_remove.snap
---
source: components/mm1-sup/src/mixed/strategy/one_for_one/tests.rs
expression: report
---
- "RestartIntensity { max_restarts: 0, within: 18446744073709551615.999999999s }"
- "ADD     [one|Permanent]"
- DECIDE
- ">>> Start(one)"
- "STARTED [one] / <:1>"
- DECIDE
- ">>> InitDone"
- "RM      [one]"
- DECIDE
- ">>> Stop(<:1>, Some(\"one\"))"
- "EXITED  <:1> normal_exit=false"
- DECIDE
