components/mm1-sup/src/mixed/strategy/one_for_one/snapshots/mm1_sup__mixed__strategy__one_for_one__tests__mixed::strategy::one_for_one::tests::run::add_two_started_remove_first.snap
---
source: components/mm1-sup/src/mixed/strategy/one_for_one/tests.rs
expression: report
---
- "RestartIntensity { max_restarts: 0, within: 18446744073709551615.999999999s }"
- "ADD     [one]"
- "ADD     [two]"
- DECIDE
- ">>> Start(one)"
- ">>> Start(two)"
- "STARTED [one] / <:1>"
- DECIDE
- "STARTED [two] / <:2>"
- DECIDE
- ">>> InitDone"
